# book_scooper

./: .gitignore  LICENSE  README.md  downloader.py  pyproject.toml  requirements.txt  scoop.py
